Melhoria no complexidade de remoção de FilaDinamica e melhoria em PilhaDinamica